--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "build": "npx tsc"
     },
     "devDependencies": {
+        "tsconfig-paths": "^4.2.0",
         "typescript": "^5.4.5"
     },
     "dependencies": {
