--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,16 @@
   "compilerOptions": {
     "target": "es2016",      
     "module": "commonjs",  
-     "esModuleInterop": true,     
-     "forceConsistentCasingInFileNames": true,  
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,     
+    "forceConsistentCasingInFileNames": true,  
     "strict": true,      
     "skipLibCheck": true,
     "outDir": "./dist"
   },
   "include": ["src"],
-  "exclude": ["node_modules"]
-  
+  "exclude": ["node_modules"],
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
+  }
 }
